Update ProSkate contact info and map

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -19,25 +19,25 @@
         </li>
       </ul>
 
-      <h3>Ice Land Rink</h3>
+      <h3>ProSkate Ice Arena</h3>
       <ul>
         <li>
-          Call <a class="text-info" href="tel:+16095886672">(609) 588-6672</a>
+          Call <a class="text-info" href="tel:+17329406400">(732) 940-6400</a>
         </li>
         <li>
-          6 Tennis Ct, Hamilton Township, NJ 08619
+          1000 Cornwall Rd, Monmouth Junction, NJ 08852
         </li>
       </ul>
     </div>
   </div>
 
-  <!-- Map of Ice Land -->
+  <!-- Map of ProSkate -->
   <div class="container d-flex justify-content-center">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.3807182200862!2d-74.67969408423373!3d40.26729227263761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e1f1a9963a49%3A0x43aeebab848f9d68!2sIce%20Land%20Skating%20Center!5e0!3m2!1sen!2sus!4v1583028068132!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" class="d-block d-md-none col-10"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24301.625887068705!2d-74.53696532952185!3d40.415424600000016!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb948251bbe6819df!2sPro%20Skate!5e0!3m2!1sen!2sus!4v1619019432708!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="d-block d-md-none col-10"></iframe>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.3807182200862!2d-74.67969408423373!3d40.26729227263761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e1f1a9963a49%3A0x43aeebab848f9d68!2sIce%20Land%20Skating%20Center!5e0!3m2!1sen!2sus!4v1583028068132!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="d-none d-md-block d-lg-none col-md-8"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24301.625887068705!2d-74.53696532952185!3d40.415424600000016!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb948251bbe6819df!2sPro%20Skate!5e0!3m2!1sen!2sus!4v1619019432708!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="d-none d-md-block d-lg-none col-md-8"></iframe>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.3807182200862!2d-74.67969408423373!3d40.26729227263761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e1f1a9963a49%3A0x43aeebab848f9d68!2sIce%20Land%20Skating%20Center!5e0!3m2!1sen!2sus!4v1583028068132!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" class="d-none d-lg-block"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24301.625887068705!2d-74.53696532952185!3d40.415424600000016!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb948251bbe6819df!2sPro%20Skate!5e0!3m2!1sen!2sus!4v1619019432708!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" class="d-none d-lg-block"></iframe>
   </div>
 
   <!-- Inquiry Form -->
