Make Google Calendar more responsive in lessons.ejs

--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -24,8 +24,11 @@
     <%# include("partials/calendar.ejs") %>
 
     <!-- Lessons Calendar from Google -->
-    <div class="embed-responsive embed-responsive-4by3 mb-3">
-      <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=aG9ja2V5cmF0c29mZmljaWFsQGdtYWlsLmNvbQ&amp;color=%23039BE5&amp;title=Lessons&amp;showTitle=0&amp;showNav=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border:solid 1px #777" frameborder="0" scrolling="no"></iframe>
+    <div class="embed-responsive embed-responsive-4by3 mb-3 d-block d-md-none">
+      <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=aG9ja2V5cmF0c29mZmljaWFsQGdtYWlsLmNvbQ&amp;color=%23039BE5&amp;title=Lessons&amp;showTitle=0&amp;showNav=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK" style="border-width:0" scrolling="no"></iframe>
+    </div>
+    <div class="embed-responsive embed-responsive-4by3 mb-3 d-none d-md-block">
+      <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=aG9ja2V5cmF0c29mZmljaWFsQGdtYWlsLmNvbQ&amp;color=%23039BE5&amp;title=Lessons&amp;showTitle=0&amp;showNav=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border-width:0" scrolling="no"></iframe>
     </div>
     
     <!-- COVID Waiver -->
