Revert Hockey rat definition but add Joe's suggestion in about.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
       <div class="col-lg my-4">
         <blockquote class="blockquote text-center pb-2">
           <p><strong>Hockey rat</strong>, <em>noun</em></p>
-          <p>A hockey player.</p>
+          <p>Someone whose life revolves around being a hockey player.</p>
         </blockquote>
 
         <hr class="border-top border-light pb-3">
