Use updated svg logo in navbar-top.ejs

--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -4,7 +4,13 @@
   <div class="container">
     <!-- Puck logo Joe -->
     <a class="navbar-brand" href="/">
-      <img src="/images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="HockeyRATS navbar logo">
+      <!-- <img src="/images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="HockeyRATS navbar logo"> -->
+
+      <img
+        src="/images/hockeyrats-logo-cropped.svg"
+        class="img-fluid rounded-lg"
+        id="navbar-logo"
+        alt="HockeyRATS navbar logo">
     </a>
 
     <!-- Navbar toggler/hamburger for smaller screens sizes -->
