--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ body {
   /* Carnellian */
   /* background-color: #b31b1b; */
 
-  background-color: transparent;
+  background-color: rgba(0,0,0,.4);
 }
 
 #navbar-logo {
