Increase font size of navbar links in navbar-top.ejs

--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -22,16 +22,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item <%= typeof page !== 'undefined' && page === 'index' ? 'active' : '' %>">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link h5" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link h5" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/lessons">Lessons</a>
+          <a class="nav-link h5" href="/lessons">Lessons</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link h5" href="/contact">Contact</a>
         </li>
       </ul>
 
