--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <!-- Profile text -->
         <div class="col-lg-8">
           <p class="lead mt-3">
-            Joe Wagner is a premier hockey instructor with over 20 years of experience. He is the head coach of the 2020-2021 Mercer Chiefs Midget U16 American AAA Team.
+            Joe Wagner is a premier hockey instructor with over 20 years of experience. He was the head coach of the 2020-2021 Mercer Chiefs Midget U16 American AAA Team.
           </p>
 
           <p class="lead d-none d-sm-block">Focus is placed on fundamental skills that benefit modern hockey players. Above all, Joe strives to ensure his students have fun!</p>
