--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,7 +115,8 @@ body {
 
 #jumbotron-index {
   /* Tritanopia color palette */
-  background-color: rgba(90, 75, 97, 0.85);
+  /* background-color: rgba(90, 75, 97, 0.85); */
+  background-color: rgba(16, 92, 132, 0.7);
 
   /* White text color */
   color: white;
