Add id to View Lessons button and remove btn-primary in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,13 @@
 
           <p>Coach Wagner is currently accepting new players.</p>
 
-          <a class="btn btn-info btn-lg" href="/lessons" role="button">View Lessons</a>
+          <a
+            class="btn btn-lg"
+            id="view-lessons-button"
+            href="/lessons"
+            role="button">
+              View Lessons
+          </a>
         </div>
       </div>
     </div>
