Change background color to black in style.css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,9 @@ html {
 
 body {
   /* Logo gray */
-  background-color: #393e46;
+  /* background-color: #393e46; */
+
+  background-color: black;
 
   /* Padding so fixed-top navbar doesn't cover content */
   /* padding-top: 56px; */
