--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,7 +19,7 @@
     <div class="row align-items-start">
       <!-- Image of Coach Wagner -->
       <div class="col-lg mb-4">
-        <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of HockeyRATS" class="img-fluid shadow border border-info rounded-lg">
+        <img src="images/joe-wagner-about-winter-3x4_medium.jpg" alt="Coach Wagner, chief of HockeyRATS" class="img-fluid shadow border rounded-lg">
       </div>
 
       <!-- About page text -->
