--- a/views/about.ejs
+++ b/views/about.ejs
@@ -46,7 +46,7 @@
 
         <p class="pb-3">We believe players from the Mini Mite to Senior levels can quickly improve by repeating fundamental drills to establish a strong base, applying the knowledge during game situations, combining ideas from multiple drills to form tactics, and expanding their toolbox of skills through continuous training.</p>
 
-        <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor with over 20 years of experience and served as the head coach of the <a href="https://www.mercerchiefs.com/page/show/5954387-u16-american-2020-2021-" class="text-info" target="_blank" rel="noreferrer noopener">2020-2021 Mercer Chiefs Midget U16 American AAA Team.</a></p>
+        <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor with over 20 years of experience and served as the head coach of the <a href="https://www.mercerchiefs.com/page/show/5954387-u16-american-2020-2021-" target="_blank" rel="noreferrer noopener">2020-2021 Mercer Chiefs Midget U16 American AAA Team.</a></p>
 
       </div>
     </div>
