--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -18,7 +18,7 @@
     <p class="pb-3">To experience the R.A.T.S. Hockey Training System, please view our available lessons below.</p>
 
     <!-- Location -->
-    <p class="pb-3">Lessons are held at <a href="https://proskatenj.com/" class="text-info" target="_blank" rel="noreferrer noopener">ProSkate Ice Arena</a> in Monmouth Junction, NJ. Please <a href="/contact" class="text-info" target="_blank" rel="noreferrer noopener">contact me</a> regarding availability or if lessons at other facilities are desired.</p>
+    <p class="pb-3">Lessons are held at <a href="https://proskatenj.com/" target="_blank" rel="noreferrer noopener">ProSkate Ice Arena</a> in Monmouth Junction, NJ. Please <a href="/contact" target="_blank" rel="noreferrer noopener">contact me</a> regarding availability or if lessons at other facilities are desired.</p>
 
     <!-- Lessons Calendar (commented out for now) -->
     <%# include("partials/calendar.ejs") %>
@@ -42,7 +42,7 @@
     </div>
     
     <!-- COVID Waiver -->
-    <p class="pb-3 text-danger">ProSkate Ice Arena requires rink participants to sign a <a href="https://app.mysportsort.com/view/index.php?an=343&myss_source=register&entitytype=0&entityid=16669" class="text-info" target="_blank" rel="noreferrer noopener">COVID waiver</a>. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND PROSKATE ICE ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
+    <p class="pb-3 text-danger">ProSkate Ice Arena requires rink participants to sign a <a href="https://app.mysportsort.com/view/index.php?an=343&myss_source=register&entitytype=0&entityid=16669" target="_blank" rel="noreferrer noopener">COVID waiver</a>. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND PROSKATE ICE ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
 
     <h1 class="display-5 text-center my-4">Sample Lessons</h1>
 
