Remove text-info from contact.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,17 +12,17 @@
       <p>For inquiries, please reach me at:</p>
       <ul>
         <li>
-          Call/Text <a class="text-info" href="tel:+19088120636">(908) 812-0636</a>
+          Call/Text <a href="tel:+19088120636">(908) 812-0636</a>
         </li>
         <li>
-          <a class="text-info" href="mailto:joe@hockeyrats.com">joe@hockeyrats.com</a>
+          <a href="mailto:joe@hockeyrats.com">joe@hockeyrats.com</a>
         </li>
       </ul>
 
       <h3>ProSkate Ice Arena</h3>
       <ul>
         <li>
-          Call <a class="text-info" href="tel:+17329406400">(732) 940-6400</a>
+          Call <a href="tel:+17329406400">(732) 940-6400</a>
         </li>
         <li>
           1000 Cornwall Rd, Monmouth Junction, NJ 08852
