--- a/views/lessons.ejs
+++ b/views/lessons.ejs
@@ -20,11 +20,11 @@
     <!-- Location -->
     <p class="pb-3">Lessons are held at <a href="https://proskatenj.com/" target="_blank" rel="noreferrer noopener">ProSkate Ice Arena</a> in Monmouth Junction, NJ. Please <a href="/contact" target="_blank" rel="noreferrer noopener">contact me</a> regarding availability or if lessons at other facilities are desired.</p>
 
-    <!-- Lessons Calendar (commented out for now) -->
-    <%# include("partials/calendar.ejs") %>
+    <!-- Lessons Calendar -->
+    <%- include("partials/calendar.ejs") %>
 
-    <!-- Lessons Calendar from Google -->
-    <div class="embed-responsive embed-responsive-4by3 mb-3 d-block d-md-none">
+    <!-- Lessons Calendar from Google (commented out for now) -->
+    <!-- <div class="embed-responsive embed-responsive-4by3 mb-3 d-block d-md-none">
       <iframe
         class="embed-responsive-item"
         src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=aG9ja2V5cmF0c29mZmljaWFsQGdtYWlsLmNvbQ&amp;color=%23039BE5&amp;title=Lessons&amp;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK"
@@ -39,7 +39,7 @@
         style="border-width:0"
         scrolling="no">
       </iframe>
-    </div>
+    </div> -->
     
     <!-- COVID Waiver -->
     <p class="pb-3 text-danger">ProSkate Ice Arena requires rink participants to sign a <a href="https://app.mysportsort.com/view/index.php?an=343&myss_source=register&entitytype=0&entityid=16669" target="_blank" rel="noreferrer noopener">COVID waiver</a>. There is an inherent risk of exposure to COVID-19 in any public place where people are present. BY PURCHASING LESSONS, YOU VOLUNTARILY ASSUME ALL RISKS RELATED TO EXPOSURE TO COVID-19. JOE WAGNER AND PROSKATE ICE ARENA DISCLAIM ANY AND ALL LIABILITY RELATED THERETO.</p>
