Update text in cart.ejs for reservations

--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="cartTitle">Cart</h5>
+        <h5 class="modal-title" id="cartTitle">Reservations</h5>
 
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -18,8 +18,8 @@
         </table>
 
         <div class="row justify-content-between">
-          <a href="#" class="col-auto text-black-50" id="clear-cart">Clear Cart</a>
-          <p class="col-auto font-weight-bold mb-0" id="cart-total-price"></p>
+          <a href="#" class="col-auto text-black-50" id="clear-cart">Clear All</a>
+          <!-- <p class="col-auto font-weight-bold mb-0" id="cart-total-price"></p> -->
         </div>
 
         <div class="d-block text-danger text-center" id="error-message"></div>
@@ -28,7 +28,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 
-        <button type="button" class="btn btn-primary" id="order-btn">Order Now</button>
+        <button type="button" class="btn btn-primary" id="order-btn">Reserve Now</button>
       </div>
 
     </div>
